* Improvement: Added option to shade slider images for overlaid text readability; this applies to post slider and simple slider elements.
* Improvement: When inputting a specific list of pages for post element query, you can now use slugs for pages, posts, and portfolio items.
* Improvement: More default spacing between elements in custom layouts.
* Updated: FontAwesome to 4.5.
* Updated: FlexSlider to 2.6.
* Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
* Fixed: Accordion feature not working with Toggles element of Layout Builder.
* Fixed: When setting an element to pull from a list of pages, the total number of pages returned shouldn't be interfered with.
* Fixed: Contact Bar element was outputting the set of icons twice.
* Fixed: SPAN HTML tags showing in texture browser.
* Fixed: When `themeblvd_tabs_deep_linking` is filtered to true, tab content wasn't changing properly.
* Fixed: Post showcase and grid display for archives not always applying the correct posts per page amount from Theme Options.
* Fixed: More minor RTL bug fixes.
    * Frontend post grid/showcase filtering and masonry now aligns correctly to the right.
    * Tabs and pills of Tabs element now align properly to right.
    * Panels no longer force text to be aligned left.
    * Pricing table columns now display in correct order, from right-to-left.
    * Progress bars now display and animate out from right.
    * "Custom CSS" option code editor on theme options page now works with RTL.

--------------------------------------------------------------

2.0.4 - 12/11/2015
------------------

* Improvement: Some frontend RTL fixes and improvements.
* Improvement: Admin RTL fixes and improvements.
* Improvement: Frontend post grid/showcase filtering now also effects navigating items in corresponding lightbox gallery.
* Improvement: Minor comment form styling adjustments for changes in WordPress 4.4+.