@@ -5479,6 +5479,9 @@ blockquote small {
 .post_grid.tb-isotope .grid-wrap > .row {
 	margin: -15px;
 }
+.element-post_grid.popout .post_grid.tb-isotope .grid-wrap > .row {
+	margin: -15px 0;
+}
 
 /* Post Showcase */
 .showcase-wrap {
